# crafting-interpreters

./: README.md
CMake-test/: CMakeLists.txt
autoTools-test/: Makefile  config.h  config.status  configure  configure.ac
autoTools-test/autom4te.cache/: output.0  output.2  requests  traces.2
autoTools-test/src/: Makefile  hello  main.c
check-unit-testing/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
check-unit-testing/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
check-unit-testing/src/: Makefile  Makefile.am  Makefile.in  doublyLinkedList.c  doublyLinkedList.h  doublyLinkedList.lo  libDoublyLinkedList.la  main  main.c
check-unit-testing/src/.deps/: doublyLinkedList.Plo  main.Po
check-unit-testing/src/.libs/: libDoublyLinkedList.la  libDoublyLinkedList.lai  libDoublyLinkedList.so.0.0.0  main
check-unit-testing/tests/: Makefile  Makefile.am  Makefile.in  check_doublyLinkedList  check_doublyLinkedList.c
check-unit-testing/tests/.deps/: check_doublyLinkedList-check_doublyLinkedList.Po
check-unit-testing/tests/.libs/: check_doublyLinkedList
clox-interpreter/: configure.ac
clox-interpreter/src/: doublyLinkedList.c  doublyLinkedList.h
